rustdocs/errors/rust-bitcoin-primitives-src-merkle_tree.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/primitives/src/merkle_tree.rs:17:5
   |
17 | use internals::array_vec::ArrayVec;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
12 + extern crate internals;
   |

error[E0432]: unresolved import `hashes`
  --> ../rust-bitcoin/primitives/src/merkle_tree.rs:15:5
   |
15 | use hashes::{sha256d, HashEngine};
   |     ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
help: you might be missing a crate named `hashes`, add it to your project and import it in your code
   |
12 + extern crate hashes;
   |

error[E0432]: unresolved import `crate::hash_types`
  --> ../rust-bitcoin/primitives/src/merkle_tree.rs:20:16
   |
20 | pub use crate::hash_types::{TxMerkleNode, TxMerkleNodeEncoder, WitnessMe...
   |                ^^^^^^^^^^ use of unresolved module or unlinked crate `hash_types`
   |
help: you might be missing a crate named `hash_types`, add it to your project and import it in your code
   |
12 + extern crate hash_types;
   |

error[E0432]: unresolved import `crate::hash_types`
  --> ../rust-bitcoin/primitives/src/merkle_tree.rs:21:12
   |
21 | use crate::hash_types::{Txid, Wtxid};
   |            ^^^^^^^^^^ use of unresolved module or unlinked crate `hash_types`
   |
help: you might be missing a crate named `hash_types`, add it to your project and import it in your code
   |
12 + extern crate hash_types;
   |

error[E0432]: unresolved import `crate::transaction`
  --> ../rust-bitcoin/primitives/src/merkle_tree.rs:22:12
   |
22 | use crate::transaction::TxIdentifier;
   |            ^^^^^^^^^^^ use of unresolved module or unlinked crate `transaction`
   |
help: you might be missing a crate named `transaction`, add it to your project and import it in your code
   |
12 + extern crate transaction;
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
